src/objects/SmartFridge__c.object
<CustomObject>
    <fields>
        <fullName>DeviceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DeviceId</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Door__c</fullName>
        <label>Door</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ts__c</fullName>
        <label>ts</label>
        <type>DateTime</type>
    </fields>
    <label>SmartFridge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Reading Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartFridges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>